<?xml version="1.0"?>
<package>
  <name>harp_perception</name>
  <version>0.0.0</version>
  <description>The apc_msgs package</description>
  <maintainer email="harp@todo.todo">harp</maintainer>
  <license>TODO</license>
  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf_conversion</build_depend>
  <build_depend>pcl_ros</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>  
  <run_depend>tf_conversion</run_depend>

  <export>

  </export>

</package>
